Fix for graph progress alignment

--- a/src/components/Graph/graph.scss
+++ b/src/components/Graph/graph.scss
@@ -55,7 +55,7 @@
 
     svg {
       width: 100%;
-      max-width: 485px;
+      max-width: 500px;
       height: auto;
     }
   }
@@ -81,7 +81,6 @@
     &__box {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      column-gap: 40px;
     }
 
     &__col {
